<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_shape_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_24sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vpn_connection"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/no_network_connection_available_please_connect_your_wifi_network"
        android:textColor="#151920" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/tvAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#553894"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/agree"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

</LinearLayout>