<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.skunpham.vpn.proxy.unblock.vpnpro.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingStart="@dimen/_24sdp"
                android:paddingRight="@dimen/_18sdp"
                android:src="@drawable/ic_setting_v2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:foregroundGravity="left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_setting"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home_app"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/btnUpgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24sdp"
                android:background="@drawable/shape_home_premium"
                android:drawablePadding="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/txt_home_upgrade"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_home_premium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".ui.home.HomeFragment">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_242sdp"
                    android:background="@drawable/bg_connect">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:visibility="visible">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnToggleConnect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:animConnectStatus="@{viewModel.connectVpnStatus}"
                            app:layout_constraintDimensionRatio="w, 1:1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:lottie_autoPlay="false"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/anim_connect" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/disconnect"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/img_disconnect"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/bg_disconnect_btn" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_disconnect"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="@dimen/_93sdp"
                            android:layout_height="@dimen/_93sdp"
                            android:background="@drawable/bg_disconnect"
                            android:fontFamily="@font/open_sans_light"
                            android:gravity="bottom|center_horizontal"
                            android:paddingBottom="@dimen/_30sdp"
                            android:text="@string/disconnect"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_time_connected"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.75" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_time_bonus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginHorizontal="@dimen/_24sdp"
                        android:background="@drawable/background_time_connect"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tvtAD"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_radius_ads"
                            android:elevation="@dimen/_10sdp"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_3sdp"
                            android:text="@string/ad"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_8sdp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/imgGift"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_gift" />

                            <TextView
                                android:id="@+id/tvtTimeBonus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:text="@string/time_bonus"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_16ssp" />
                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </RelativeLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutChangeSever"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginHorizontal="@dimen/_24sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:background="@drawable/ic_home_connect_status"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_16sdp">

                    <ImageView
                        android:id="@+id/img_server_connected"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:clickable="false"
                        app:imageLocationServer="@{viewModel.selectedServer}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/img_server" />

                    <TextView
                        android:id="@+id/tv_server_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:ellipsize="end"
                        android:fontFamily="@font/open_sans_light"
                        android:lines="1"
                        android:paddingStart="@dimen/_8sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_server_connected"
                        app:layout_constraintTop_toTopOf="parent"
                        app:nameLocationServer="@{viewModel.selectedServer}"
                        tools:text="Philippines" />

                    <TextView
                        android:id="@+id/txt_change_server"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#7E47F2"
                        android:clickable="false"
                        android:drawableEnd="@drawable/ic_arrow_back"
                        android:fontFamily="@font/open_sans_light"
                        android:text="@string/change"
                        android:textAllCaps="false"
                        android:textColor="#E1DAF1"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16sdp"
                        app:layout_constraintBottom_toBottomOf="@id/llDownload"
                        app:layout_constraintEnd_toStartOf="@id/llDownload"
                        app:layout_constraintTop_toTopOf="@id/llDownload"
                        app:srcCompat="@drawable/ic_home_download" />

                    <LinearLayout
                        android:id="@+id/llDownload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_24sdp"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/view"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_home_download"
                            android:textColor="@color/colorTextSpeed"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/txtDownloadSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_home_speed_default"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="0dp"
                        android:background="#C9C9CF"
                        android:rotation="15"
                        app:layout_constraintBottom_toBottomOf="@id/llDownload"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/llUpload" />

                    <ImageView
                        android:id="@+id/imgUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24sdp"
                        app:layout_constraintBottom_toBottomOf="@id/llUpload"
                        app:layout_constraintStart_toEndOf="@+id/view"
                        app:layout_constraintTop_toTopOf="@id/llUpload"
                        app:srcCompat="@drawable/ic_home_upload" />

                    <LinearLayout
                        android:id="@+id/llUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imgUpload"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_home_upload"
                            android:textColor="@color/colorTextSpeed"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/txtUploadSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_home_speed_default"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>